--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -15,6 +15,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
+  margin-top: 10%;
 }
 .store-buttons {
   display: flex;
@@ -49,6 +50,10 @@
   position: absolute;
   width: 88%;
   height: 78%;
+  
+}
+.footer-section-text{
+
 }
 .demo3{
   /* border: 2px solid red; */
