--- a/src/components/Header/Header1.css
+++ b/src/components/Header/Header1.css
@@ -32,6 +32,8 @@
     left: 48%;
     width: 3.8%;
     box-shadow: 0 6px 40px rgba(0, 72, 255, 0.2);
+    background: #1f66ff;
+    opacity: 0.7;
 }
 
 .nav {
@@ -64,6 +66,7 @@
     font-weight: bold;
     cursor: pointer;
     margin-right: 0%;
+    
 }
 
 .btn {
