--- a/src/components/Header/Header1.css
+++ b/src/components/Header/Header1.css
@@ -61,9 +61,9 @@
 
 .logo {
     font-size: 1.5rem;
-    font-weight: bold;
+    /* font-weight: bold; */
     cursor: pointer;
-    margin-right: 0%;
+    /* margin-right: 0%; */
 }
 
 .btn {
