--- a/src/components/Header/Header1.css
+++ b/src/components/Header/Header1.css
@@ -29,11 +29,11 @@
     transition: left 0.3s ease, width 0.3s ease, background-color 0.3s ease, border-radius 0.3s ease, background 0.3s ease, backdrop-filter 0.3s ease, -webkit-backdrop-filter 0.3s ease, margin-top 0.3s ease, box-shadow 0.3s ease;
 }
 .header.scrolled {
-    left: 48%;
-    width: 3.8%;
+    left: 46%;
+    width: 0.2%;
     box-shadow: 0 6px 40px rgba(0, 72, 255, 0.2);
-    background: #1f66ff;
-    opacity: 0.7;
+    background: #ffffff00;
+    opacity: 1;
 }
 
 .nav {
@@ -67,6 +67,7 @@
     cursor: pointer;
     margin-right: 0%;
     
+    
 }
 
 .btn {
@@ -95,6 +96,8 @@
     height:50%;
 }
 .header_short_logo{
-    width:100%;
-    height: 20%;
+    position: absolute;
+    /* width: 100%; */
+    height: 220%;
+    top: 12%;
 }
